--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/_GymMemberBodyMeasurementPopUp.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/_GymMemberBodyMeasurementPopUp.cshtml
@@ -31,7 +31,7 @@
                 </div>
                 <div class="mb-3">
                     @Html.LabelFor(x => x.BodyMeasurementValue, new { @class = "form-label required" })
-                    @Html.TextBoxFor(x => x.BodyMeasurementValue, new { @class = "form-control", @placeholder = @Model.BodyMeasurementType + "( in " + @Model.MeasurementUnitShortCode + ")", @onkeypress = "return CoditechCommon.ValidDecimalNumeric()" })
+                    @Html.TextBoxFor(x => x.BodyMeasurementValue, new { @class = "form-control", @placeholder = @Model.BodyMeasurementType + "( in " + @Model.MeasurementUnitShortCode + ")", @onkeypress = "return CoditechCommon.ValidDecimalNumeric()",@min="1" })
                     @Html.ValidationMessageFor(x => x.BodyMeasurementValue)
                 </div>
 
