GMSD-116: ORG- If "Is Default" and "Default Flag" field is a mandatory field as unable to save data without selecting these fields also if its a mandatory field * is missing here.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/_List.cshtml
@@ -19,7 +19,7 @@
                     {
                         <tr>
                             <td> @item.MembershipPlanName</td>
-                            <td>@item.PlanTypeEnumId</td>
+                            <td>@item.PlanType</td>
                             <td>
                                 @{
                                     string membershipplanPeriodInfo = "";
