--- a/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/EmployeeMaster/_List.cshtml
@@ -35,7 +35,8 @@
                             <td>@item.LastName</td>
                             <td>@item.Gender</td>
                             <td>@item.MobileNumber</td>
-                            <td>@item.EmailId</td>                          
+                            <td>@item.EmailId</td>
+                            <td>@item.SanctionPostName</td>
                             <td>
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
                             </td>
