GMSD-127: LEAD G - Location Field Not Saved or Updated in Lead Generation

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
@@ -165,8 +165,8 @@
                                 <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Location, new { @class = "form-label" })
-                                        @Html.TextAreaFor(x => x.PhoneNumber, new { @class = "form-control", type = "tel" })
-                                        @Html.ValidationMessageFor(x => x.PhoneNumber)
+                                        @Html.TextAreaFor(x => x.Location, new { @class = "form-control", type = "tel" })
+                                        @Html.ValidationMessageFor(x => x.Location)
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
