--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/CreateEdit.cshtml
@@ -3,8 +3,7 @@
     ViewBag.Title = Model.GeneralLeadGenerationMasterId > 0 ? "Update LeadGeneration" : "Add Lead Generation";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
-    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode };
-
+    DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "CentreCode", DropdownSelectedValue = Model.CentreCode, IsRequired = true };
 }
 
 <!-- Page Content-->
@@ -16,7 +15,11 @@
                     <div class="card-header">
                         <div class="row align-items-center">
                             <div class="col">
-                                @if (Model.GeneralLeadGenerationMasterId > 0)
+                                @if (Model.GeneralLeadGenerationMasterId > 0 && Model.IsConverted)
+                                {
+                                    <h4 class="card-title">View Lead Generation</h4>
+                                }
+                                else if (Model.GeneralLeadGenerationMasterId > 0)
                                 {
                                     <h4 class="card-title">Update Lead Generation</h4>
                                 }
@@ -35,12 +38,12 @@
                             <div class="row">
                                 <div class="col-lg-6">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required" })
+                                        @Html.LabelFor(x => x.CentreCode, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
-                                        @Html.ValidationMessageFor(x => x.SelectedCentreCode)
+                                        @Html.ValidationMessageFor(x => x.CentreCode)
                                         @if (Model.GeneralLeadGenerationMasterId > 0)
                                         {
-                                            @Html.HiddenFor(x => x.SelectedCentreCode)
+                                            @Html.HiddenFor(x => x.CentreCode)
                                         }
                                     </div>
                                 </div>
@@ -108,12 +111,12 @@
                                     </div>
                                 </div>
                                 @* <div class="col-lg-3">
-                                    <div class="mb-3">
-                                        @Html.LabelFor(x => x.DateOfBirth, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.DateOfBirth, AdminGeneralHelper.DateFormat(),  new { @class = "form-control", @id = "DateOfBirth" })
-                                        @Html.ValidationMessageFor(x => x.DateOfBirth, null, new { id = "errorDateOfBirth" })
-                                    </div>
-                                </div> *@
+                            <div class="mb-3">
+                            @Html.LabelFor(x => x.DateOfBirth, new { @class = "form-label" })
+                            @Html.TextBoxFor(x => x.DateOfBirth, AdminGeneralHelper.DateFormat(),  new { @class = "form-control", @id = "DateOfBirth" })
+                            @Html.ValidationMessageFor(x => x.DateOfBirth, null, new { id = "errorDateOfBirth" })
+                            </div>
+                            </div> *@
                                 <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.EmailId, new { @class = "form-label" })
@@ -124,14 +127,14 @@
                                 <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.MobileNumber, new { @class = "form-label required" })
-                                        @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control", type = "tel" })
+                                        @Html.TextBoxFor(x => x.MobileNumber, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
                                         @Html.ValidationMessageFor(x => x.MobileNumber)
                                     </div>
                                 </div>
                                 <div class="col-lg-3">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PhoneNumber, new { @class = "form-label" })
-                                        @Html.TextBoxFor(x => x.PhoneNumber, new { @class = "form-control", type = "tel" })
+                                        @Html.TextBoxFor(x => x.PhoneNumber, new { @class = "form-control", @onkeypress = "return CoditechCommon.ValidNumeric()" })
                                         @Html.ValidationMessageFor(x => x.PhoneNumber)
                                     </div>
                                 </div>
@@ -143,7 +146,7 @@
                                    DropdownSelectedValue = Model.LeadGenerationSourceEnumId.ToString(),
                                    DropdownName = "LeadGenerationSourceEnumId",
                                    GroupCode = DropdownTypeEnum.GymSource.ToString()
-                                  
+
                                })
                                         @Html.ValidationMessageFor(x => x.LeadGenerationSourceEnumId)
                                     </div>
@@ -189,7 +192,7 @@
                                         @Html.ValidationMessageFor(x => x.Comments)
                                     </div>
                                 </div>
-                              
+
                                 @if (Model.GeneralLeadGenerationMasterId > 0 && !Model.IsConverted)
                                 {
                                     <div class="col-lg-3">
@@ -201,8 +204,19 @@
                                         </div>
                                     </div>
                                 }
+                                @if (Model.GeneralLeadGenerationMasterId > 0 && Model.IsConverted)
+                                {
+                                    <div class="col-lg-3">
+                                        <div class="mb-3">
+                                            <label class="form-label" style="color:forestgreen">Great! Lead Is Converted</label>
+                                        </div>
+                                    </div>
+                                }
                             </div>
-                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                            @if (!Model.IsConverted)
+                            {
+                                <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                            }
                             <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
