--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralLeadGenerationMaster/_List.cshtml
@@ -28,8 +28,12 @@
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsConverted)
                             </td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?generalLeadGenerationId=@item.GeneralLeadGenerationMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?LeadGenerationIds=@item.GeneralLeadGenerationMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="../@controllerName/Edit?generalLeadGenerationId=@item.GeneralLeadGenerationMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>
+                                @if (!item.IsConverted)
+                                {
+                                    <span class="m-2">|</span>
+                                    <a href="../@controllerName/Delete?LeadGenerationIds=@item.GeneralLeadGenerationMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                }
                             </td>
                         </tr>
                     }
