--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberMembershipPlan/AssociateGymMemberMembershipPlan.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberMembershipPlan/AssociateGymMemberMembershipPlan.cshtml
@@ -45,7 +45,7 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PlanStartDate, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.PlanStartDate, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.PlanStartDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.PlanStartDate)
                                     </div>
