--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPersonAddress.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPersonAddress.cshtml
@@ -17,7 +17,7 @@
         <div class="col-lg-4">
             <div class="mb-3">
                 @Html.LabelFor(x => x.FirstName, new { @class = "form-label required" })
-                @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control", @onkeypress = "return CoditechCommom.AllowOnlyAlphabetWithoutSpacing()" })
+                @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(x => x.FirstName)
             </div>
         </div>
@@ -30,13 +30,13 @@
         <div class="col-lg-4">
             <div class="mb-3">
                 @Html.LabelFor(x => x.LastName, new { @class = "form-label required" })
-                @Html.TextBoxFor(x => x.LastName, new { @class = "form-control", @onkeypress = "return CoditechCommon.AvoidSpacing()" })
+                @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
                 @Html.ValidationMessageFor(x => x.LastName)
             </div>
         </div>
         <div class="col-lg-4">
             <div class="mb-3">
-                @Html.LabelFor(x => x.EmailAddress, new { @class ="form-label" })
+                @Html.LabelFor(x => x.EmailAddress, new { @class = "form-label" })
                 @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control" })
                 @Html.ValidationMessageFor(x => x.EmailAddress)
             </div>
