--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPersonAddress.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/GeneralPerson/_CreateEditGeneralPersonAddress.cshtml
@@ -17,20 +17,20 @@
         <div class="col-lg-4">
             <div class="mb-3">
                 @Html.LabelFor(x => x.FirstName, new { @class = "form-label required" })
-                @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control" })
+                @Html.TextBoxFor(x => x.FirstName, new { @class = "form-control", @onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
                 @Html.ValidationMessageFor(x => x.FirstName)
             </div>
         </div>
         <div class="col-lg-4">
             <div class="mb-3">
                 @Html.LabelFor(x => x.MiddleName, new { @class = "form-label" })
-                @Html.TextBoxFor(x => x.MiddleName, new { @class = "form-control" })
+                @Html.TextBoxFor(x => x.MiddleName, new { @class = "form-control", @onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
             </div>
         </div>
         <div class="col-lg-4">
             <div class="mb-3">
                 @Html.LabelFor(x => x.LastName, new { @class = "form-label required" })
-                @Html.TextBoxFor(x => x.LastName, new { @class = "form-control" })
+                @Html.TextBoxFor(x => x.LastName, new { @class = "form-control", @onkeypress = "return CoditechCommon.AllowOnlyAlphabetWithouSpacing()" })
                 @Html.ValidationMessageFor(x => x.LastName)
             </div>
         </div>
