--- a/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeDetails/_DBTMTraineeDetailsSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/DBTM/DBTMTraineeDetails/_DBTMTraineeDetailsSidePannel.cshtml
@@ -16,6 +16,9 @@
                 <a class="nav-link" href="/DBTMTraineeDetails/MemberOtherDetails?dBTMTraineeDetailId=@dBTMTraineeDetailId" aria-selected="true">
                     <i class="fas fa-info-circle"></i><h5 class="m-0 ps-2">Other Details</h5>
                 </a>
+                <a class="nav-link" href="/DBTMTraineeDetails/GetAssociatedTrainerList?SelectedParameter1=@dBTMTraineeDetailId&SelectedParameter2=@personId" aria-selected="true">
+                    <i class="fas fa-id-card-alt"></i><h5 class="m-0 ps-2">Associated Trainer</h5>
+                </a>
             </div>
         </div>
     </div>
