--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNotificationMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNotificationMaster/_List.cshtml
@@ -41,7 +41,7 @@
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                                <!-- Delete action with selectedCentreCode parameter -->
+                                                <!-- Delete action with GeneralNotificationId parameter -->
                                                 <a href="../@controllerName/Delete?generalNotificationId=@item.GeneralNotificationId" class="btn btn-outline-danger">Delete</a>
                                             </div>
                                         </div>
