--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNotificationMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNotificationMaster/_List.cshtml
@@ -21,7 +21,9 @@
                             <td>@item.NotificationDetails</td>
                             <td>@item.FromDate.ToCoditechDateFormat()</td>
                             <td>@item.UptoDate.ToCoditechDateFormat()</td>
-                            <td>@item.IsActive</td>
+                            <td>
+                                @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
+                            </td>
 
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?generalNotificationId=@item.GeneralNotificationId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
