GMSD-154: GYM - Enhancement Icons Not proper.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/_SaleInvoiceList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymSalesInvoice/_SaleInvoiceList.cshtml
@@ -42,16 +42,12 @@
 								</div>
 							</td>
 							<td>@AdminGeneralHelper.FormatPriceWithCurrency(@item.BillAmount)</td>
-							<td>
-								@if (item.PaymentType.Equals("Cash", StringComparison.InvariantCultureIgnoreCase))
+							<td style="text-align: center; width: 0px">
+								@if (!string.IsNullOrEmpty(item?.PlanDurationType))
 								{
-									<i class="fas fa-coins"></i>
+									string image = $"{@item.PaymentType.Replace(" ", "")}.png";
+									<img src="../assets/images/@image" class="rounded-circle thumb-xs me-1" title="@item.PaymentType" />
 								}
-								else
-								{
-									<i class="fas fa-credit-card"></i>
-								}
-								@item.PaymentType
 							</td>
 							<td>
 								@if (item.PaymentReceivedBy.Equals("Super Admin", StringComparison.InvariantCultureIgnoreCase))
