--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/GeneralTraineeAssociatedToTrainer/CreateEditAssociatedTrainer.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/GeneralTraineeAssociatedToTrainer/CreateEditAssociatedTrainer.cshtml
@@ -56,7 +56,7 @@
                                    DropdownName = "GeneralTrainerMasterId",
                                    DropdownSelectedValue = Model.GeneralTrainerMasterId.ToString(),
                                    Parameter = Model.GeneralTraineeAssociatedToTrainerId == 0
-                                    ? $"{Model.SelectedCentreCode}~{Model.SelectedDepartmentId}~{Model.EntityId}~{Model.UserType}~false"
+                                    ? $"{Model.SelectedCentreCode}~{0}~{Model.EntityId}~{Model.UserType}~false"
                                     : $"{Model.SelectedCentreCode}~{Model.SelectedDepartmentId}~{Model.EntityId}~{Model.UserType}~true",
                                    IsDisabled = Model.GeneralTraineeAssociatedToTrainerId > 0
                                })
