GMSD-147: ADMIN - Sorting Not Working in Role Allocate User Screen

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/RoleAllocatedToUserList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/RoleAllocatedToUserList.cshtml
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <div class="card-body">
-                        <input type="hidden" id="SelectedParameter1" value="@Model.AdminRoleMasterId" />
+                        <input type="hidden" id="SelectedParameter1" value="@Model.SelectedParameter1" />
                         <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
                             @Html.Partial("~/Views/Admin/AdminRoleMaster/_RoleAllocatedToUserList.cshtml", Model)
                         </div>
