--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/_AdminRoleMasterSidePannel.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/_AdminRoleMasterSidePannel.cshtml
@@ -13,7 +13,7 @@
                 <a class="nav-link" href="/adminrolemaster/AllocateAccessRights?adminRoleMasterId=@Model" aria-selected="true">
                     <i class="fas fa-key"></i><h5 class="m-0 ps-2">Role Wise Access Rights</h5>
                 </a>
-                <a class="nav-link" href="/adminrolemaster/RoleAllocatedToUserList?adminRoleMasterId=@Model" aria-selected="true">
+                <a class="nav-link" href="/adminrolemaster/RoleAllocatedToUserList?SelectedParameter1=@Model" aria-selected="true">
                     <i class="fas fa-user-tag"></i><h5 class="m-0 ps-2">Role Allocated To User's</h5>
                 </a>
                 <a class="nav-link" href="/adminrolemaster/RoleWiseFolderAction?adminRoleMasterId=@Model" aria-selected="true">
