--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/_RoleAllocatedToUserList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/_RoleAllocatedToUserList.cshtml
@@ -22,8 +22,8 @@
                             <td>@item.LastName</td>
                             <td>@item.PersonCode</td>
                             <td>@item.EmailId</td>
-                            <td>@item.WorkToDate</td>
-                            <td>@item.WorkFromDate</td>
+                            <td>@item.WorkToDate.ToCoditechDateFormat()</td>
+                            <td>@item.WorkFromDate.ToCoditechDateFormat()</td>
                             <td>@Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)</td>
                             <td class="text-center">
                                 <a href="../@controllerName/GetAssociateUnAssociateAdminRoleToUser?adminRoleMasterId=@item.AdminRoleMasterId&adminRoleApplicableDetailId=@item.AdminRoleApplicableDetailId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>
