GMSD-46:GYM - Multiple height measurements for the same type and date are allowed to be added.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/GymMemberBodyMeasurement.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/GymMemberBodyMeasurement.cshtml
@@ -56,7 +56,7 @@
                                                             foreach (var value in item.GymMemberBodyMeasurementValueList)
                                                             {
                                                                 <tr>
-                                                                    <td>@value.BodyMeasurementDate.ToCoditechDateFormat()</td>
+                                                                    <td>@value.BodyMeasurementDate.ToCoditechDateWithTimeFormat()</td>
                                                                     <td>@value.BodyMeasurementValue @value.MeasurementUnitShortCode</td>
                                                                     <td>
                                                                         <div class="d-flex justify-content-start">
