--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/GeneralTraineeAssociatedToTrainer/CreateEditAssociatedTrainer.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTrainerMaster/GeneralTraineeAssociatedToTrainer/CreateEditAssociatedTrainer.cshtml
@@ -1,8 +1,13 @@
 ﻿@model GeneralTraineeAssociatedToTrainerViewModel
 @{
-    ViewBag.Title = Model.GeneralTraineeAssociatedToTrainerId > 0 ? "Update Associated Trainer" : "Add Associated Trainer";
+    ViewBag.Title = Model.GeneralTraineeAssociatedToTrainerId > 0 ? "Update Associate Trainer" : "Associate Trainer";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
+
     string actionName = ViewContext.RouteData.Values["action"].ToString();
+    Dictionary<string, string> keyValuePairs = new Dictionary<string, string>();
+    keyValuePairs.Add("GeneralTraineeAssociatedToTrainerId", Model.GeneralTraineeAssociatedToTrainerId.ToString());
+    keyValuePairs.Add("PersonId", Model.PersonId.ToString());
+
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "CoditechCommon.GetDepartmentByCentreCode()", IsDisabled = Model.GeneralTraineeAssociatedToTrainerId > 0 };
     DropdownViewModel departmentDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseDepartment.ToString(), DropdownName = "SelectedDepartmentId", DropdownSelectedValue = Convert.ToString(Model.SelectedDepartmentId), Parameter = Model.SelectedCentreCode, ChangeEvent = "DBTMTraineeDetails.GetTrainerListByCentreCodeAndDepartmentId()", IsDisabled = Model.GeneralTraineeAssociatedToTrainerId > 0 };
 }
@@ -10,18 +15,22 @@
 <div class="page-content mt-5">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-12">
+            
+                <div class="col-lg-2">
+                @Html.Partial("~/Views/DBTM/DBTMTraineeDetails/_DBTMTraineeDetailsSidePannel.cshtml", keyValuePairs)
+                </div>
+            <div class="col-lg-10">
                 <div class="card">
                     <div class="card-header">
                         <div class="row align-items-center">
                             <div class="col">
                                 @if (Model.GeneralTraineeAssociatedToTrainerId > 0)
                                 {
-                                    <h4 class="card-title">Update Associated Trainer Details: @Model.FirstName @Model.LastName</h4>
+                                    <h4 class="card-title">Update Associate Trainer Details: @Model.FirstName @Model.LastName</h4>
                                 }
                                 else
                                 {
-                                    <h4 class="card-title">Add Associated Trainer</h4>
+                                    <h4 class="card-title">Associate Trainer: @Model.FirstName @Model.LastName</h4>
                                 }
                             </div><!--end col-->
                         </div>  <!--end row-->
@@ -49,7 +58,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="md-3">
-                                        @Html.LabelFor(x => x.GeneralTrainerMasterId, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.GeneralTrainerMasterId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownType = DropdownTypeEnum.UnAssociatedTrainerList.ToString(),
@@ -69,7 +78,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.IsCurrentTrainer, new { @class = "form-check-label required"})
+                                        @Html.LabelFor(x => x.IsCurrentTrainer, new { @class = "form-check-label"})
                                         <div class="form-check">
                                             @Html.CheckBoxFor(x => x.IsCurrentTrainer, new { @class = "form-check-input" })
                                         </div>
