GMSD-132: TOOLKIT - Default Date Values Should Be Blank in Create Notification Form

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNotificationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNotificationMaster/CreateEdit.cshtml
@@ -69,9 +69,12 @@
     </div>
 </div>
 
-@section scripts {
+@section scripts 
+{
     <script type="text/javascript">
         $(function () {
+             $("#FromDate").val('');
+             $("#UptoDate").val('');
             // Initialize FromDate datepicker
             $("#FromDate").datepicker({
                 changeMonth: true,
