--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableSearchData.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableSearchData.cshtml
@@ -6,14 +6,18 @@
 }
 <div class="col-sm-12 col-md-6">
     <div id="datatable_filter" class="dataTables_filter">
-        <label>
-            Search:
-            <input id="DataTables_SearchById" type="text" onkeyup="CoditechCommon.SearchDatatableData()" class="form-control form-control-sm" value="@Model">
-            <a id="DataTables_SearchButton" onclick="CoditechDataTable.LoadList('@controllerName','@actionName')"><i class="fas fa-search" title="Search"></i></a>
+        <div class="align-items-center d-inline-flex gap-2 justify-content-center search-wrapper">
+            <label>
+                Search:
+            </label>
+            <div class="search-field position-relative">
+                <input id="DataTables_SearchById" type="text" onkeyup="CoditechCommon.SearchDatatableData()" class="form-control form-control-sm" value="@Model">
+                <a id="DataTables_SearchButton" onclick="CoditechDataTable.LoadList('@controllerName','@actionName')" class="position-absolute search-icon"><i class="fas fa-search" title="Search"></i></a>
+            </div>
             @if (!string.IsNullOrEmpty(@Model))
             {
-                <a onclick="CoditechDataTable.ReloadLoadList('@controllerName','@actionName')"><i class="fas fa-times" title="Clear"></i></a>
+                <a onclick="CoditechDataTable.ReloadLoadList('@controllerName','@actionName')"><i class="fas fa-times-circle" title="Clear"></i></a>
             }
-        </label>
+        </div>
     </div>
 </div>
