--- a/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
+++ b/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
@@ -348,3 +348,31 @@ td.text-center a.btn {
 #MediaUpload .file-box-content .file-box i.dripicons-download {
     color: #03d87f;
 }
+
+.search-field .search-icon {
+    top: 4px;
+    right: 8px;
+    cursor: pointer;
+}
+.search-wrapper .fa-times-circle {
+    color: #f5325c;
+    cursor: pointer;
+}
+.dataTables_paginate ul.pagination .page-link {
+    font-size: 14px !important;
+    border: none;
+    background: transparent;
+}
+.danger-color {
+    color: #f5325c;
+}
+.multiselect-dropdown .dropdown-toggle {
+    background-color: #f1f5fa;
+    border: 1px solid #e3ebf6;
+    font-size: .8125rem;
+    font-weight: 400;
+}
+.multiselect-dropdown .dropdown-toggle:focus {
+    outline: none !important;
+    border: 1px solid #8bb0fe;
+}
