--- a/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
+++ b/Coditech.Project/Admin/Coditech.Admin/wwwroot/css/layout/site.css
@@ -363,8 +363,8 @@ td.text-center a.btn {
     border: none;
     background: transparent;
 }
-.danger-color {
-    color: #f5325c;
+.bottom-15{
+    bottom:15px;
 }
 .multiselect-dropdown .dropdown-toggle {
     background-color: #f1f5fa;
@@ -375,4 +375,8 @@ td.text-center a.btn {
 .multiselect-dropdown .dropdown-toggle:focus {
     outline: none !important;
     border: 1px solid #8bb0fe;
+}
+.scroll-wrapper {
+    max-height: calc((100vh) - 150px);
+    overflow-y: auto;
 }
