GMSD-172: GYM - Inconsistent Button Labels in "Body Measurement" Popup for Gym Management

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/_GymMemberBodyMeasurementPopUp.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GymMemberBodyMeasurement/_GymMemberBodyMeasurementPopUp.cshtml
@@ -42,7 +42,7 @@
 
     <!-- end modal-body -->
     <div class="modal-footer">
-        <button type="submit" class="btn btn-success" data-test-selector="linkSave">ADD</button>
+        <button type="submit" class="btn btn-success" data-test-selector="linkSave">SAVE</button>
         <button type="button" class="btn btn-soft-secondary btn-sm" data-bs-dismiss="modal">CANCEL</button>
     </div>
 }
