--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_CreateEditMemberFollowUp.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/_CreateEditMemberFollowUp.cshtml
@@ -75,7 +75,7 @@
             @AdminResources.LabelSave
         </button>
 
-        <button type="button" class="btn btn-soft-secondary btn-sm" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-soft-secondary btn-sm" data-bs-dismiss="modal">Cancel</button>
     </div>
 }
 @Html.Partial("_ValidationScriptsPartial")
