--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GeneralPersonAttendanceDetails/_CreateEditGeneralPersonAttendanceDetails.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMemberDetails/GeneralPersonAttendanceDetails/_CreateEditGeneralPersonAttendanceDetails.cshtml
@@ -66,6 +66,7 @@
 
     <div class="modal-footer">
         <a id="saveDraft" class="btn btn-success" data-test-selector="linkSave" onclick="GymMemberDetails.SaveManualAttendance()">@AdminResources.LabelSave</a>
+        <button type="button" class="btn btn-soft-secondary btn-sm" data-bs-dismiss="modal">CANCEL</button>
     </div>
 }
 
