GMSD-37: GYM- Formatting issue with "Services" field. Box is missing.

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/Edit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/Edit.cshtml
@@ -50,7 +50,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
-                                    <div class="mb-3">
+                                    <div class="mb-3  multiselect-dropdown">
                                         @Html.LabelFor(x => x.SelectedRoleWiseCentres, new { @class = "form-label required" })
                                         @if (Model.MonitoringLevel == AdminConstants.Self)
                                         {
