--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTaxGroupMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTaxGroupMaster/CreateEdit.cshtml
@@ -37,7 +37,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
-                                    <div class="mb-3">
+                                    <div class="mb-3 multiselect-dropdown">
                                         @Html.LabelFor(x => x.GeneralTaxMasterIds, new { @class = "form-label required" })
                                         @Html.ListBoxFor(m => m.GeneralTaxMasterIds, new SelectList(Model.AllTaxList, "GeneralTaxMasterId", "TaxName"), new { @class = "selectpicker form-control" })
                                         @Html.ValidationMessageFor(x => x.GeneralTaxMasterIds)
