--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gym/GymMembershipPlan/CreateEdit.cshtml
@@ -73,7 +73,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
-                                    <div class="mb-3">
+                                    <div class="mb-3  multiselect-dropdown">
                                         @Html.LabelFor(x => x.SelectedGeneralServicesIds, new { @class = "form-label required" })
                                         @Html.ListBoxFor(m => m.SelectedGeneralServicesIds, new SelectList(Model.AllGeneralServices, "InventoryGeneralItemLineId", "ItemName"), new { @class = "selectpicker form-control " })
                                         @Html.ValidationMessageFor(x => x.SelectedGeneralServicesIds)
