--- a/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaSettingMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/MediaManager/MediaSettingMaster/CreateEdit.cshtml
@@ -38,7 +38,7 @@
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
-                                    <div class="mb-3">
+                                    <div class="mb-3 multiselect-dropdown">
                                         @Html.LabelFor(x => x.SelectedMediaTypeExtensionMasterIds, new { @class = "form-label required" })
                                         @Html.ListBoxFor(x => x.SelectedMediaTypeExtensionMasterIds, new SelectList(Model.MediaTypeExtensionList, "MediaTypeExtensionMasterId", "ExtensionName"), new { @class = "selectpicker form-control", multiple = "multiple" })
                                         @Html.ValidationMessageFor(x => x.SelectedMediaTypeExtensionMasterIds)
