--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/ChangePassword.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/ChangePassword.cshtml
@@ -10,10 +10,10 @@
             <div class="row">
                 <div class="col-lg-5 mx-auto">
                     <div class="card">
-                       @*  <div class="card-body p-0 auth-header-box">
-                            <div class="text-center p-3">
-                                <h4 class="fw-semibold text-white font-18">Change Password</h4>
-                            </div>
+                        @*  <div class="card-body p-0 auth-header-box">
+                        <div class="text-center p-3">
+                        <h4 class="fw-semibold text-white font-18">Change Password</h4>
+                        </div>
                         </div> *@
                         <div class="card-header">
                             <div class="row align-items-center">
@@ -38,20 +38,22 @@
                                         </div>
                                         <div class="form-group mb-2">
                                             @Html.LabelFor(x => x.NewPassword, new { @class = "form-label required" })
-                                            <div class="input-group">
-                                                @Html.PasswordFor(x => x.NewPassword, new { @class = "form-control" })
+                                            <div class="input-group password-input-wraper">
+                                                @Html.PasswordFor(x => x.NewPassword, new { @class = "form-control password-input" })
+                                                <i class="fas fa-eye view-password"></i>
                                             </div>
                                             @Html.ValidationMessageFor(m => m.NewPassword, null)
                                         </div>
                                         <div class="form-group mb-2">
                                             @Html.LabelFor(x => x.ConfirmPassword, new { @class = "form-label required" })
-                                            <div class="input-group">
-                                                @Html.PasswordFor(x => x.ConfirmPassword, new { @class = "form-control" })
+                                            <div class="input-group password-input-wraper">
+                                                @Html.PasswordFor(x => x.ConfirmPassword, new { @class = "form-control password-input", type = "Password", placeholder = "Confirm Password here..." })
+                                                <i class="fas fa-eye view-password"></i>
                                             </div>
                                             @Html.ValidationMessageFor(m => m.ConfirmPassword, null)
+                                            @Html.ValidationMessageFor(m => m.ErrorMessage, null)
                                         </div>
                                         <div class="form-group row my-3">
-                                           
                                         </div>
                                         <div class="form-group mb-0 row">
                                             <div class="col-12">
@@ -69,3 +71,18 @@
         </div>
     </div>
 </div>
+@section Scripts {
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $(".view-password").click(function () {
+                $(this).toggleClass("fa fa-eye-slash");
+                var inputAttribute = $('.password-input');
+                if (inputAttribute.attr("type") == "password") {
+                    inputAttribute.attr("type", "text");
+                } else {
+                    inputAttribute.attr("type", "password");
+                }
+            });
+        });
+    </script>
+}
