GMSD-95: ORG- After adding a Building Name the record is not getting displayed at "Building Name" drop-down field in "Organisation Centrewise Building Room".

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuildingRooms/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Organisation/OrganisationCentrewiseBuildingRooms/List.cshtml
@@ -4,7 +4,7 @@
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
     DropdownViewModel centreDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.AccessibleCentre.ToString(), DropdownName = "SelectedCentreCode", DropdownSelectedValue = Model.SelectedCentreCode, ChangeEvent = "OrganisationCentrewiseBuildingRooms.GetOrganisationCentrewiseBuildingByCentreCode()" };
-    DropdownViewModel bulidingDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseBuilding.ToString(), DropdownName = "SelectedParameter1", DropdownSelectedValue = Convert.ToString( Model.OrganisationCentrewiseBuildingMasterId), ChangeEvent = "OrganisationCentrewiseBuildingRooms.GetBuildingRoomsByBuildingMasterId('" + @controllerName + "','" + @actionName + "')" };
+    DropdownViewModel bulidingDropdown = new DropdownViewModel() { DropdownType = DropdownTypeEnum.CentrewiseBuilding.ToString(), DropdownName = "SelectedParameter1", DropdownSelectedValue = Convert.ToString(Model.OrganisationCentrewiseBuildingMasterId), ChangeEvent = "OrganisationCentrewiseBuildingRooms.GetBuildingRoomsByBuildingMasterId('" + @controllerName + "','" + @actionName + "')" };
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
@@ -13,11 +13,11 @@
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
-                            <span class="card-title">@AdminResources.LabelOrganisationCentrewiseBuildingRoomsList</span>
-                            <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Building Room</a>
-                            
-                        </div>
-                   
+                        <span class="card-title">@AdminResources.LabelOrganisationCentrewiseBuildingRoomsList</span>
+                        <a class=" btn btn-sm btn-soft-primary float-end" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Building Room</a>
+
+                    </div>
+
                     <div class="card-header">
                         <div class="row">
                             <div class="col-md-1">
@@ -33,10 +33,11 @@
                                 @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", bulidingDropdown)
                             </div>
                             <div class="col-md-1">
-                                <input type="button" class="btn btn-success" value="Show" id="ShowDataId" onclick="OrganisationCentrewiseBuildingRooms.GetBuildingRoomsByBuildingMasterId('@controllerName','@actionName')" "     />
+                                <input type="button" class="btn btn-success" value="Show" id="ShowDataId" onclick="OrganisationCentrewiseBuildingRooms.GetBuildingRoomsByBuildingMasterId('@controllerName','@actionName')"        />
                             </div>
                         </div>
                     </div>
+
                     <div class="card-body">
                         <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
                             @Html.Partial("~/Views/Organisation/OrganisationCentrewiseBuildingRooms/_List.cshtml", Model)
@@ -47,4 +48,6 @@
         </div>
     </div>
 </div>
+
 <!-- end page content -->
+<script src="~/js/coditech/Organisation/OrganisationCentrewiseBuildingRooms.js"></script>
